--- a/_posts/2019-04-30-tutorial2.md
+++ b/_posts/2019-04-30-tutorial2.md
@@ -40,7 +40,7 @@ to the cloud, offering more flexibility.
 
 On the wheel, we propose to implement the Feather 32u4, an Arduino-like, Bluetooth
 enabled board by AdaFruit. Have a look at the documentation we compiled to get
-an overview of its capabilities and set up your Arduino IDE: [Feather 32u4](../resources/feather.md)
+an overview of its capabilities and set up your Arduino IDE: [Feather 32u4](feather.md)
 
 For this you will also have to install the following library (Bluefruit nRF51), which you can do in Sketch -> Include Library -> Manage Libraries :
 
