cleaning tutorials and fsrs

--- a/_posts/2019-04-30-tutorial2.md
+++ b/_posts/2019-04-30-tutorial2.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Tutorial 2: Integrating and Visualising Sensor-Based Data"
+title:  "Tutorial 2: Sensing over Bluetooth"
 date:   2019-04-30 01:30:13 +0000
 categories: Tutorials
 tags: Wheelchair
@@ -316,7 +316,7 @@ left_wheel.subscribe(GATT_CHARACTERISTIC_ORIENTATION,
                      callback=handle_orientation_data)
 ```
 
-## 5 Local Pre-Processing
+## 4 Local Pre-Processing
 
 To go further, you can have a look at the second example orientation_rotation which
 show an example of a service with two characteristics.
