--- a/_posts/2019-04-30-tutorial1.md
+++ b/_posts/2019-04-30-tutorial1.md
@@ -1,143 +1,51 @@
 ---
 layout: post
-title:  "Tutorial 1: Building an Internet-connected Wheelchair"
+title:  "Tutorial 1: Arduino to DCD Hub, via Serial and Raspberry Pi"
 date:   2019-04-30 01:30:13 +0000
 categories: Tutorials
-tags: Wheelchair
+tags: Wheelchair Arduino RaspberryPi Serial
 ---
 
-In this tutorial we lead you step-by-step toward setting up the main components
-of the Internet-Connected Wheelchair by getting the code, registering on the cloud
-platform, running a Python code and running an Arduino code.
+In this tutorial we lead you toward sensing data over serial. We will collect data
+coming out of a Force Sensitive Resistor.
 
-1. [Git Flow](#1-git-flow)
-2. [Data-Centric Data Hub](#2-data-centric-design-hub-per-group)
-3. [Run Python Example](#3-run-python-example)
-4. [Data Collection with Arduino](#4-data-collection-with-arduino)
-5. [Setting up the Raspberry Pi](#5-setting-up-the-raspberry-pi)
+## Step 1: Force Sensitive Resistor
 
+Have a look to the following post on FSR to explore this sensor:
+[FSR](/docs/2019/04/30/sensors-force)
 
+## Step 2: Formatting data output
 
+We now want to send this data to a Python programme, running on a computer connected
+via serial to the Arduino. To make it easy (and more systematic) to parse for
+the receiver (Python code), you need to produce the following output for each line
+of data.
 
-
-# 4 Data Collection with Arduino
-
-In this section we will log short and long press events of a push
-button. It highlights that a sensor-based data point can be as simple as a button
-event and tell us about how a user make use of it.
-
-## 4.1 Push Button Example
-
-In Atom, copy the folder examples > arduino > push_button_led_log
-in your 'wheelchair' folder. Then, open this folder in Arduino IDE.
-
-Looking at the code, we recognise the Arduino-like structure in three blocks:
-
-* Declaration of variables and libraries, available throughout the code.
-Note by convention, the constants are in uppercase (variables that will not change
-during the programme) while other variables are in lowercase.
-
-```cpp
-int BUTTON_PIN = 22; // choose the input pin for the push button
-int LED_PIN = 13;    // Choose the output pin for the LED
-
-long LONG_PRESS_TIME = 500; // How long is a 'long press' (minimum, in ms)
-
-long buttonActiveSince = 0; // Since when the button has been pressed (in ms since Arduino started)
-boolean longPressActive = false; // Are we currently in a 'long press' event
+```txt
+your-property-id,value
 ```
 
-* The setup() method executed once when the Arduino starts;
+## Step 4: Python
 
-```cpp
-void setup() {
-  pinMode(BUTTON_PIN, INPUT);    // declare pushbutton as input
-  pinMode(LED_PIN, OUTPUT);      // declare LED as input
-
-  Serial.begin(9600); // setting baud speed for Serial (a baud is a pulse)
-
-}
-```
-
-* The Loop() method executed infinitely after the setup method.
-**WARNING** -  make sure to replace MY_PROPERTY_ID in this example with the ID of a property you created in Data-Centric Design hub.
-
-```cpp
-void loop() {
-  // Is button active?
-  if (digitalRead(button) == LOW) {
-    // if the button was not yet pressed
-    if (buttonActiveSince == 0) {
-        buttonActiveSince = millis();
-    } else if ((millis() - buttonActiveSince > LONG_PRESS_TIME)
-                && longPressActive == false) {
-          longPressActive = true;
-          digitalWrite(led, HIGH);  // turn LED ON
-        }
-    }
-
-  // Was button active?
-  } else {
-    // Was Long Press event?
-    if (buttonActiveSince > 0) {
-      // End Long Press event
-      if (longPressActive == true) {
-        Serial.println("MY_PROPERTY_ID,2");
-        digitalWrite(led, LOW);  // turn LED OFF
-        longPressActive = false;
-
-      // End Short Press event
-      } else {
-        Serial.println("MY_PROPERTY_ID,1");
-      }
-      buttonActiveSince = 0;
-    }
-  }
-
-}
-```
-
-In this example, we want to detect when a push button is pressed. We will trigger
-two type of events when the button is released: 'short' or 'long' press.
-
-The following flow chart illustrates the algorithm of this example code.
-
-![Flowchart Push Button](/docs/assets/res/push_button_flow_chart.png)
-
-In the Arduino IDE, go in the top menu 'Tools > Boards', and  select 'Arduino/Genuino Mega or Mega 2560'
-
-Then press the Verify button (green circle with tick).
-
-## 4.2 Wire Push Button and LED
-
-In this example we need three wires, a resistor, an LED and a push button.
-
-![Flowchart Push Button](/docs/assets/res/push_button_led_log.svg)
-
-## 4.3 Connect Arduino
-
-Use the USB cable to connect the Arduino to your laptop.
-
-In Arduino IDE, in the top menu Tools > Port select your Arduino
-
-Then press the Flash button to send the code into the Arduino (green circle with right arrow)
-
-In the Arduino IDE, in the top menu 'Tools' open the 'Serial Monitor'.
-Look at the input, pressing the push button should turn on the LED and produce a
-log in the Serial Monitor.
-
-
-## 4.4 Update Python Example
-
-The last step is to adapt the Python code on your laptop to read the Serial input
+The last step is to write a Python code on your laptop to read the Serial input
 from the Arduino and forward them to the Data-Centric Design Hub.
 
-You can copy the code from examples/serial_example.py in your wheelchair folder.
+You can find the full example 
+[here](https://github.com/datacentricdesign/docs/blob/master/examples/communication/serial/serial_to_dcdhub.py)
 
-In this code, we use the environment variable again to provide the thing id and token.
+The following code shows how to open a serial connection.
 
-We need an extra environment variable(SERIAL) to specify the serial port. You can find
-the port name for it on the Arduino IDE, in the top menu Tools > Ports. For example:
+```python
+# Start reading the serial port
+ser = serial.Serial(
+    port = os.environ['SERIAL'],
+    baudrate = 9600,
+    timeout = 2)
+```
+
+In this code, we use an extra environment variable (SERIAL) to specify the serial port.
+You can find the port name for it on the Arduino IDE, in the top menu Tools > Ports.
+For example:
 
 ```bash
 THING_ID=
@@ -145,21 +53,37 @@ THING_TOKEN=
 SERIAL=MY_PORT_NAME
 ```
 
-We are now ready to run the Python code
+Once the connection is open, we want to read each incoming line and decode it as
+text (utf-8). Each line contains the property id, followed by the values separated
+with comma. We decompose the line by splitting on comma, retrieve the property
+and update the values.
 
-On Mac
-
-```bash
-python3 wheelchair/serial_example.py
+```python
+# Read the next line from the serial port
+# and update the property values
+def serial_to_property_values():
+    # Read one line
+    line_bytes = ser.readline()
+    # If the line is not empty
+    if len(line_bytes) > 0:
+        # Convert the bytes into string
+        line = line_bytes.decode('utf-8')
+        # Split the string using commas as separator, we get a list of strings
+        values = line.split(',')
+        # Use the first element of the list as property id
+        property_id = values.pop(0)
+        # Get the property from the thing
+        prop = my_thing.properties[property_id]
+        # If we find the property, we update the values (rest of the list)
+        if prop is not None:
+            prop.update_values([float(x) for x in values])
+        # Otherwise, we show a warning
+        else:
+            print('Warning: unknown property ' + property_id)
 ```
 
-On Windows
-
-```bash
-python wheelchair\serial_example.py
-```
-
-Go back to Grafana to visualise the inputs
+You can execute the Python script again and check incoming data with
+[Grafana](/docs/2019/04/30/tool-granafa).
 
 
 
