--- a/_posts/2019-04-30-tutorial3.md
+++ b/_posts/2019-04-30-tutorial3.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Tutorial 3: Actuators"
+title:  "Tutorial 3: Rotation to Vibration"
 date:   2019-04-30 01:30:13 +0000
 categories: Tutorials
 tags: Wheelchair
