back to date conversion

--- a/examples/process/jupyter-analysis.ipynb
+++ b/examples/process/jupyter-analysis.ipynb
@@ -89,7 +89,12 @@
     "from datetime import datetime\n",
     "# What dates?\n",
     "START_DATE = \"2019-05-08 21:17:00\"\n",
-    "END_DATE = \"2019-05-08 21:25:00\""
+    "END_DATE = \"2019-05-08 21:25:00\"\n",
+    "\n",
+    "from datetime import datetime\n",
+    "DATE_FORMAT = '%Y-%m-%d %H:%M:%S'\n",
+    "from_ts = datetime.timestamp(datetime.strptime(START_DATE, DATE_FORMAT)) * 1000\n",
+    "to_ts = datetime.timestamp(datetime.strptime(END_DATE, DATE_FORMAT)) * 1000"
    ]
   },
   {
