progress on training and prediction

--- a/examples/process/training.ipynb
+++ b/examples/process/training.ipynb
@@ -8,20 +8,25 @@
     "\n",
     "## Load data\n",
     "\n",
-    "First, load the SDK of the Data-centric design Hub to connect to your Thing"
+    "First, load the SDK of the Data-centric design Hub to connect to your Thing\n",
+    "\n",
+    "Note: like in the Python script for data collection, you need an .env file with your thing id and token."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from dotenv import load_dotenv\n",
+    "import os\n",
     "from dcd.entities.thing import Thing\n",
     "\n",
     "# The thing ID and access token\n",
-    "THING_ID=\"test-85a2\"\n",
-    "THING_TOKEN=\"eyJhbGciOiJSUzI1NiIsInR5cCI6IkpXVCJ9.eyJpYXQiOjE1NTY3Mzc4OTgsImV4cCI6MTg3MjMxNzQ5OCwiYXVkIjoiaHR0cHM6Ly9kd2QudHVkZWxmdC5ubDo0NDMvYXBpIn0.v86EPFYU5ozkDaS47on393BGD8JiZMrTBhJxZ0ZmqhgvehluC6RqJRe8cHctyLUqvVjNRtnjQ4w5LV88EAGU62dgsuAh41x94XReL2fy-FfDN2tEzFZcDNf8bZgwgUNkyUS_l0hlvbnu5nruA7zbfn1qf4eFT0GsEo4ZWF6_EpE5v0EAQwFYgAZnixWyfiNiCUQdGoTTa4o7v9SEqhYTmctT_O90SJvUowfazSfrInvdcbe5vGazBOZ407ilNfHZz5serZWaIAVZRC3YWH-2EM2q3FMEhP9JPjCEEyeayQYOJYSes1ojAtcNS9J4a8fGVClDmFL2WRSug4MCXcwH24tuTXzbv3M4iM2MfW5qG7elg1_yQwcPN-W8CkOHXa-XdjYmnx9MjGgDXiOO0yYciSVrqBgrMYjkEsXCyxrJpbzxDf_3HB7mdBKXNNGRgJTXkc_SOo6NsVwzO2Kn-ancAMMf_ROL6JT15F6WqWjyzna25d2b9APbRvhmiMamK_hOUnnP5b36QQpmfJvgLoKHRV4thqNUWvH-CKXriGAe0fA0TAkRuS3_ACqTMM7jXDPxwSHWFVZrbxjSa8yoTDGTwrtcHGKvtiQcz7nBNMbll4yYHfiGhXqT9EXHBBbW6prcNo3D-3DnS6EIusFNh6T9oWX9SNH2dKGiixM34vCWfL0\"\n",
+    "load_dotenv()\n",
+    "THING_ID = os.environ['THING_ID']\n",
+    "THING_TOKEN = os.environ['THING_TOKEN']\n",
     "\n",
     "my_thing = Thing(thing_id=THING_ID, token=THING_TOKEN)\n",
     "my_thing.read()"
@@ -36,14 +41,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from datetime import datetime\n",
     "DATE_FORMAT = '%Y-%m-%d %H:%M:%S'\n",
-    "START_DATE = \"2019-05-08 21:17:00\"\n",
-    "END_DATE = \"2019-05-08 21:25:00\"\n",
+    "START_DATE = \"2019-05-16 10:53:00\"\n",
+    "END_DATE = \"2019-05-16 10:56:00\"\n",
     "\n",
     "from_ts = datetime.timestamp(datetime.strptime(START_DATE, DATE_FORMAT)) * 1000\n",
     "to_ts = datetime.timestamp(datetime.strptime(END_DATE, DATE_FORMAT)) * 1000"
@@ -88,7 +93,8 @@
    "outputs": [],
    "source": [
     "classes = []\n",
-    "for clazz in sitting.classes:\n",
+    "for index, clazz in enumerate(sitting.classes):\n",
+    "    print(index, \" => \", clazz['name'])\n",
     "    classes.append(clazz['name'])"
    ]
   },
@@ -236,10 +242,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "## Cross Validation accuracy > 80%\n",
     "\n",
@@ -344,7 +348,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "classification_report(testLabel, predicted, target_names=classes)"
+    "print(classification_report(testLabel, predicted, target_names=classes))"
    ]
   },
   {
