gti and getting started

--- a/_posts/2019-09-10-tools-git.md
+++ b/_posts/2019-09-10-tools-git.md
@@ -44,19 +44,33 @@ If you do not have GitHub account, sign up
 
 ## Repository
 
-### 1 Create Repository
+### Create Repository
 
-### 2 Clone repository
+Once you signed up on GitHub, we want to create a repository for your code.
+Click on the tab 'Repositories', then on the green button 'New'.
+
+You provide a name and a description for your repository. This repository will be
+public, you will need to pay for a private repository on GitHub. Then, tick the box 
+'Initialize this repository with a README' so that your repository contains an
+inital file. The 'README' file is a common place for developers to write relevant
+information for visitors to get started with their project. You can select
+a .gitignore 'Python', so that git ignores all the Python files that are not necessary
+to store on your repository. Finally, you can select a License for your project, we
+ use MIT (very open) as an example.
+
+![Flowchart Push Button](/docs/assets/res/git-create.png)
+
+### Clone repository
 
 *'When you create a repository on GitHub, it exists as a remote repository. You
 can clone your repository to create a local copy on your computer and sync
 between the two locations.'*
 <a href="https://help.github.com/articles/cloning-a-repository/" target="_blank">(GitHub Help)</a>
 
-On GitHub, at the top of your forked repository, click on the green button 'Clone or
+On GitHub, at the top of your created repository, click on the green button 'Clone or
 download' and copy the provided link.
 
-![Flowchart Push Button](/docs/assets/res/link_clone.png)
+![Flowchart Push Button](/docs/assets/res/git-link-clone.png)
 
 Go back to the Atom terminal, and type 'git clone' followed by the link you copied.
 For example:
@@ -65,7 +79,7 @@ For example:
 git clone https://github.com/example/wheelchair-design-platform.git
 ```
 
-![Flowchart Push Button](/docs/assets/res/clone.png)
+![Flowchart Push Button](/docs/assets/res/git-clone.png)
 
 Let's tell Git who we are, by typing the following commands (enter these commands one after the other):
 
