fix links and images

--- a/_posts/2019-09-10-tools-git.md
+++ b/_posts/2019-09-10-tools-git.md
@@ -58,7 +58,7 @@ a .gitignore 'Python', so that git ignores all the Python files that are not nec
 to store on your repository. Finally, you can select a License for your project, we
  use MIT (very open) as an example.
 
-![Flowchart Push Button](/docs/assets/res/git-create.png)
+![Git Create Repository](/docs/assets/res/git-create.png)
 
 ### Clone repository
 
@@ -70,16 +70,16 @@ between the two locations.'*
 On GitHub, at the top of your created repository, click on the green button 'Clone or
 download' and copy the provided link.
 
-![Flowchart Push Button](/docs/assets/res/git-link-clone.png)
+![Git Link Clone](/docs/assets/res/git-link-clone.png)
 
 Go back to the Atom terminal, and type 'git clone' followed by the link you copied.
 For example:
 
 ```bash
-git clone https://github.com/example/wheelchair-design-platform.git
+git clone https://github.com/example/prototype.git
 ```
 
-![Flowchart Push Button](/docs/assets/res/git-clone.png)
+![Git Clone](/docs/assets/res/git-clone.png)
 
 Let's tell Git who we are, by typing the following commands (enter these commands one after the other):
 
@@ -111,12 +111,12 @@ we use '#' for titles and '*' for bullet points. More formatting can be found
 Open README.md and add a title at the top of the file, for example:
 
 ```markdown
-# A Noisy Wheelchair
+# A Connected Prototype
 
 By Jane and Joe
 ```
 
-![Flowchart Push Button](/docs/assets/res/git_change.png)
+![Flowchart Push Button](/docs/assets/res/git-change.png)
 
 Note: A blue dot appears next to your file name README.md at the top of the page,
 letting you know the changes to it are not saved. Press Command+S (or Ctrl+S) to save.
@@ -131,7 +131,7 @@ In the 'Unstaged changes', double-click on the README.md to 'stage' it, i.e.
 prepare this file to track its changes. The middle tab shows you the
 changes.
 
-![Flowchart Push Button](/docs/assets/res/git_stage.png)
+![Flowchart Push Button](/docs/assets/res/git-stage.png)
 
 ### Step 3: Commit, i.e Record Changes Locally
 
@@ -139,7 +139,7 @@ Then we add a 'Commit message' to briefly explain the nature of those changes,
 e.g. 'A test of Git and Markdown'. Click on 'Commit to Master' to track the changes.
 You have made one change (commit) to your local repository.
 
-![Flowchart Push Button](/docs/assets/res/git_commit.png)
+![Flowchart Push Button](/docs/assets/res/git-commit.png)
 
 ### Step 4: Push, i.e  Send Local Changes to GitHub
 
